# python-uv-template

./: .ai-policy.json  .aiexclude  .gitignore  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.agents/: skills.json
.agents/skills/: .gitignore
.agents/skills/agent-behavior/: SKILL.md
.agents/skills/ai-safety/: SKILL.md
.agents/skills/code-conventions/: SKILL.md
.agents/skills/project-structure-setup/: SKILL.md
.agents/skills/skills-authoring/: SKILL.md
.agents/skills/skills-authoring/references/: checklist.md  template.md
.agents/skills/skills-meta/: SKILL.md
.agents/skills/tasks-management/: SKILL.md
.agents/skills/tool-adopt-these-skills/: SKILL.md
.agents/skills/tool-adopt-these-skills/references/: checklist.md
.agents/skills/tool-consolidate-skills/: SKILL.md
.agents/skills/tool-consolidate-skills/references/: checklist.md
.github/: copilot-instructions.md
.github/skills/agent-behavior/: SKILL.md
.github/skills/code-conventions/: SKILL.md
.github/skills/project-structure-setup/: SKILL.md
.github/skills/skills-meta/: SKILL.md
.github/skills/tasks-management/: SKILL.md
.github/workflows/: ci.yaml
scripts/: expected_mock_uv_project.toml  init_project.py  init_project_test.py  mock_poetry_project.toml  sync-ai-ignores.mts  sync_ai_ignores.py  sync_ai_policy.py  sync_ai_policy_test.py  transition_to_uv.py  transition_to_uv_test.py
scripts/mocks/: expected_mock_uv_project.toml  mock_poetry_project.toml
skills/agent-behavior/: SKILLS.md
skills/code-conventions/: SKILL.md
skills/tasks/: SKILL.md
skills/tasks-management/: SKILL.md
src/my_project/: sync_ai_policy.py
